# ax-botorch

./: hello.py  pyproject.toml  requirements.txt
ax-essentials/: vanilla_bo.ipynb
ax-essentials/utils/: synthetic.py
